# libcomps

./: .gitattributes  .gitignore  .packit.yaml  MANIFEST.in  README.md  SCONS_BUILD.README  build_prep.cmake  build_prep.py  build_prep.sh  chcommits  index.html  libcomps.pc.in  libcomps.spec  libcomps.spec.in  libcomps.spec.scons.in  params.json  pyproject.toml  rel-bump.cmake  rel-bump.py  rel-bump.sh  scons_build.sh  setup.py  setup_for_python_metadata.py  ver-bump.py  version.cfg  version.cmake  version.json
.github/workflows/: ci-python.yml  release-python.yml
buildutils/: chlog.py  version.py
libcomps/: .gitattributes  CMakeLists.txt  libcomps_config.h  version.cmake  version.cmake.in
libcomps/docs/: CMakeLists.txt  Doxyfile.user.in  mainpage.dox  objs.dox
libcomps/src/: CMakeLists.txt  comps.c  comps.h  comps_bradix.c  comps_bradix.h  comps_default.c  comps_default.h  comps_dict.c  comps_dict.h  comps_doc.c  comps_doc.h  comps_doc_types.h  comps_doccategory.c  comps_doccategory.h  comps_docenv.c  comps_docenv.h  comps_docgroup.c  comps_docgroup.h  comps_docgroupid.c  comps_docgroupid.h  comps_docpackage.c  comps_docpackage.h  comps_elem.c  comps_elem.h  comps_getset.c  comps_getset.h  comps_hslist.c  comps_hslist.h  comps_list.c  comps_list.h  comps_log.c  comps_log.h  comps_log_codes.c  comps_log_codes.h  comps_logger.c  comps_logger.h  comps_mm.c  comps_mm.h  comps_mradix.c  comps_mradix.h  (+23 more)
libcomps/src/libcomps/: comps.h  comps_dict.h  comps_hslist.h  comps_list.h  comps_logger.h  comps_parse.h  comps_radix.h  comps_set.h  comps_types.h
libcomps/src/python/: CMakeLists.txt  crc32.h  pversion.cmake  pycomps.c  pycomps.h  pycomps_23macros.h  pycomps_categories.c  pycomps_categories.h  pycomps_ctopy.c  pycomps_ctopy.h  pycomps_ctopy_seq.c  pycomps_ctopy_seq.h  pycomps_ctopy_seq_iter.c  pycomps_ctopy_seq_iter.h  pycomps_dict.c  pycomps_dict.h  pycomps_envs.c  pycomps_envs.h  pycomps_exc.c  pycomps_exc.h  pycomps_gids.c  pycomps_gids.h  pycomps_groups.c  pycomps_groups.h  pycomps_hash.c  pycomps_ids.c  pycomps_ids.h  pycomps_lang.c  pycomps_lang.h  pycomps_lbw.c  pycomps_mdict.c  pycomps_mdict.h  pycomps_sequence.c  pycomps_sequence.h  pycomps_types.h  pycomps_utils.c  pycomps_utils.h  pycopy.cmake
libcomps/src/python/docs/: CMakeLists.txt  Doxyfile.user.in
libcomps/src/python/docs/doc-sources/: comps.rst  conf.py  conf.py.in  index.rst  unioning.rst
libcomps/src/python/examples/: libcomps_example.py
libcomps/src/python/python2/: CMakeLists.txt
libcomps/src/python/python3/: CMakeLists.txt
libcomps/src/python/src/: CMakeLists.txt  crc32.h  pycomps.c  pycomps.h  pycomps_23macros.h  pycomps_categories.c  pycomps_categories.h  pycomps_dict.c  pycomps_dict.h  pycomps_envs.c  pycomps_envs.h  pycomps_exc.c  pycomps_exc.h  pycomps_gids.c  pycomps_gids.h  pycomps_groups.c  pycomps_groups.h  pycomps_hash.c  pycomps_hash.h  pycomps_ids.c  pycomps_lang._c  pycomps_lang._h  pycomps_lbw.c  pycomps_lbw.h  pycomps_macros.h  pycomps_mdict.c  pycomps_sequence.c  pycomps_sequence.h  pycomps_types.h  pycomps_utils.c  pycomps_utils.h
libcomps/src/python/src/python2/: CMakeLists.txt
libcomps/src/python/src/python3/: CMakeLists.txt
libcomps/src/python/tests/: __test.py  fedora_comps.xml  run_tests.sh.in  test_libcomps.py  test_merge_comps.py  tests.cmake  utest.py
libcomps/src/python/tests/comps/: biarchonly.xml  comps-f21.xml  comps-f21.xml.in  comps-rawhide.xml  comps_empty_by_lang_tags.xml  comps_part1.xml  comps_part2.xml  f21-rawhide-comps.xml  main_arches.xml  main_comps2.xml  main_def.xml  merged_comps_1_2.xml  merged_comps_2_1.xml  sample_comps2.xml
libcomps/tests/: CMakeLists.txt  check_brtree.c  check_comps.c  check_list.c  check_mrtree.c  check_objrtree.c  check_parse.c  check_rtree.c  check_utils.c  check_utils.h  check_validate.c  comps.dtd  dict-test.txt  dict-test2.txt  f21-rawhide-comps.xml  fedora_comps.xml  main_arches.xml  sample-bad-elem.xml  sample-comps-back.xml  sample-comps-dtd.xml  sample-comps-lang.xml  sample-comps.xml  sample-elem-error.xml  sample-good.xml  sample-wrong-dtd.xml  sample-wrong-param.xml  sample_comps.xml  sample_comps_bad1.xml  sample_comps_bad2.xml  sample_comps_bad3.xml
rel-eng/: tito.props
scons/: SConstruct  __init__.py  colors.scons  configure.scons  libcomps.scons  libcomps_docs.scons  libcomps_tests.scons  libpycomps2.scons  libpycomps3.scons  libpycomps_docs.scons  libpycomps_tests.scons  py2.json  py3.json  pyconf2.py  pyconf3.py
